fix to spacing
for metrics on citations so number of digits doesn’t matter

--- a/resources/theme/_researcher.scss
+++ b/resources/theme/_researcher.scss
@@ -32,10 +32,10 @@ uqlibrary-research {
         background-color: $background-primary;
       }
       .metrics-cites {
-        padding: 0.6em 1em 0.3em 1em;
+        padding: 0.6em 0 0.3em 0;
         font-size: 24px;
         font-weight: 300;
-//        width: 50%;
+        width: 3em;
         text-align: center;
         background-color: $background-primary;
       }
@@ -44,7 +44,6 @@ uqlibrary-research {
         font-size: 11px;
         font-weight: 300;
         background-color: $background-primary;
-        padding: 0 0.6em;
       }
       .plus {
         padding: 5px;
